# configurator

./: .gitignore  .prettierignore  Cargo.toml  DEV.md  NOTE.md  README.md  RECOMMENDATION.md  SPEC.md  TODO.md  ZCONF.md  io.github.cosmic-utils.configurator.json  io.github.cosmic_utils.configurator.json  justfile  ui.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configurator/: Cargo.toml
configurator/res/: io.github.wiiznokes.configurator.json
configurator/schemas/: io.github.wiiznokes.configurator.json
configurator/src/: app.rs  config.rs  icon.rs  json_schema_test_suite.rs  localize.rs  main.rs  message.rs  page.rs  test_common.rs  testing1.rs  utils.rs  view.rs
configurator/src/manual_testing/: mod.rs  testing1.rs
configurator/src/node/: apply_figment.rs  data_path.rs  from_json_schema.rs  mod.rs  number.rs  provider.rs  ser.rs  test.rs  tests.rs  to_figment_value.rs
configurator/src/node/tests/: apply_retreive_value.rs  mod.rs  node_generation.rs
configurator/src/providers/: cosmic_ron.rs  mod.rs  tests.rs
configurator/src/test_schema/: mod.rs  testing1.rs  testing2.rs
configurator_schema/: Cargo.toml
configurator_schema/src/: lib.rs
configurator_utils/: Cargo.toml
configurator_utils/src/: lib.rs
cosmic_compat/: .gitignore  generate_schema.sh
cosmic_compat/schemas/: com.system76.CosmicPanel.Dock.json  com.system76.CosmicPanel.Panel.json  com.system76.CosmicPanel.json
dev/: DEV.md  TODO.md
figment_schemars_bridge/: README.md  default.json  partial1.gen.json  partial1.json  schema.json
figment_schemars_bridge/src/: figment_serde_bridge.rs  json_schema_provider.rs
i18n/it/: configurator.ftl
res/: config_schema.json  desktop_entry.desktop  metainfo.xml
vexpe/: Cargo.toml  config.json  config2.json  merge1.json  merge2.json  path  schema.json  test1.json  test2.json  test3.json
vexpe/src/: expe_serde1.rs  expe_serde2.rs  expe_serde3.rs  lib.rs
vtesting/: Cargo.toml
vtesting/src/: main.rs
zconf/: README.md  ZCONF.md
zconf/figment_schemars_bridge/: Cargo.toml  README.md  default.json  partial1.gen.json  partial1.json  schema.json
zconf/figment_schemars_bridge/src/: lib.rs
zconf/zconf/: Cargo.toml
zconf/zconf/src/: lib.rs
zconf/zconf2/: Cargo.toml
zconf/zconf2/src/: lib.rs
zconf/zconf_derive/: Cargo.toml
zconf/zconf_derive_impl/: Cargo.toml
zconf/zconf_derive_impl/src/: lib.rs
zconf2/src/: lib.rs
zconf_derive/src/: lib.rs
zconf_derive_impl/src/: backend.rs
