[workspace]
members = [
    "configurator",
    "configurator_schema",
    "figment_schemars_bridge",
    "zconf",
    "zconf_derive",
    "zconf_derive_impl",
    "vexpe",
    # "vtesting",
]
resolver = "2"

[workspace.package]
authors = ["wiiznokes <wiiznokes2@gmail.com>"]
edition = "2021"
license = "GPL-3.0"
keywords = []

[workspace.lints.rust]
unused_variables = "allow"
dead_code = "allow"
unused_imports = "allow"

[workspace.dependencies]
configurator_schema = { path = "configurator_schema" }
figment_schemars_bridge = { path = "figment_schemars_bridge" }
zconf = { path = "zconf" }

figment = { version = "0.10", features = ["json"] }
schemars = "0.8"
serde = { version = "1" }
json = { version = "1", package = "serde_json" }
anyhow = "1"
# kaydle = "0.2.0"
# kdl = "4.6.0"
# knuffel = "3.2.0"
