[package]
name = "expe"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[lints]
workspace = true


[dependencies]
figment = { version = "0.10.19", features = ["json"] }
kaydle = "0.2.0"
kdl = "4.6.0"
knuffel = "3.2.0"
pretty_assertions = "1.4.1"
schemars = "0.8.21"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
