[package]
name = "figment_schemars_bridge"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
figment.workspace = true
schemars.workspace = true
serde.workspace = true

[dev-dependencies]
pretty_assertions = "1"
json.workspace = true