[package]
name = "zconf2"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
directories.workspace = true
anyhow.workspace = true
serde.workspace = true
json.workspace = true
log.workspace = true

[lints]
workspace = true
